<resources>
    <string name="app_name">Hilo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="create_an_account">Create an Account</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="back">Back</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="company">Company</string>
    <string name="how_did_you_hear_about_us">How did you hear about us?</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="welcome_to_hilo_s_beta_release">Welcome to Hilo\'s BETA Release!!</string>
    <string name="beta_message">Beta release means we are still working on improvements, new features and taking in user feedback. We can\'t wait to hear you.</string>
    <string name="got_it">Got it !!</string>
    <string name="goal_tracker">Goal tracker</string>
    <string name="contacts">Contacts</string>
    <string name="reachout_log">Reach Out Log</string>
    <string name="todos">To dos</string>
    <string name="more">More</string>
    <string name="adjust_my_graphs">Adjust My Graphs\n%s</string>
    <string name="hilo_my_week">Hilo my week</string>
    <string name="current_goal_plan">Current Goal Plan</string>
    <string name="change_plan">Change plan</string>
    <string name="reach_outs">Reach outs</string>
    <string name="follow_ups">Follow ups</string>
    <string name="team_reach_outs">Team reach outs</string>
    <string name="reach_outs_s">Reach Outs (%s)</string>
    <string name="new_reach_outs">New Reach Outs</string>
    <string name="search">Search</string>
    <string name="complete">Complete</string>
    <string name="delete">Delete</string>
    <string name="follow_ups_s">Follow Ups (%s)</string>
    <string name="team_reach_outs_s">Team Reach Outs (%s)</string>
    <string name="contact_info">Contact info</string>
    <string name="title">Title</string>
    <string name="email_2">Email 2</string>
    <string name="email_3">Email 3</string>
    <string name="email_4">Email 4</string>
    <string name="phone_number">Phone Number</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="work_phone">Work Phone</string>
    <string name="home_phone">Home Phone</string>
    <string name="group">Group</string>
    <string name="contact_type">Contact Type</string>
    <string name="pipeline_postion">Pipeline Position</string>
    <string name="temp">Temp</string>
    <string name="children">Children</string>
    <string name="spouse">Spouse</string>
    <string name="birthday">Birthday</string>
    <string name="three_way_to_call">Three way call</string>
    <string name="personal_info">Personal Info</string>
    <string name="derived_by">Derived By</string>
    <string name="source">Source</string>
    <string name="job_title">Job Title</string>
    <string name="give_it_a_glow_sample">Give It A Glow Sample</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="auto_ship_date">Auto Ship Date</string>
    <string name="concerns">Concerns</string>
    <string name="gift">Gift</string>
    <string name="wrinkles">Wrinkles</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="dark_marks">Dark Marks</string>
    <string name="lashes_brows">Lashes/Brows</string>
    <string name="sagging">Sagging</string>
    <string name="acne">Acne</string>
    <string name="dullness">Dullness</string>
    <string name="gift_given">Gift Given</string>
    <string name="rodan_plus_fields">Rodan + Fields</string>
    <string name="tags">Tags</string>
    <string name="new_tag">New Tag</string>
    <string name="add">Add</string>
    <string name="new_custom_field">New Custom Field</string>
    <string name="add_new_field">Add New Field</string>
    <string name="facebook_personal">Facebook - Personal</string>
    <string name="facebook_work">Facebook - Business</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="pinterest">Pinterest</string>
    <string name="periscope">Periscope</string>
    <string name="linkedin">LinkedIn</string>
    <string name="snap_chat">Snap Chat</string>
    <string name="vine">Vine</string>
    <string name="tumblr">Tumblr</string>
    <string name="youtube">YouTube</string>
    <string name="google_plus">Google+</string>
    <string name="meetup">Meetup</string>
    <string name="website_personal">Website - Personal</string>
    <string name="website_work">Website - Business</string>
    <string name="other_one">Other 1</string>
    <string name="other_two">Other 2</string>
    <string name="social_and_websites"><![CDATA[Social & Websites]]></string>
    <string name="street">Street</string>
    <string name="street_two">Street 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="country">Country</string>
    <string name="save">Save</string>
    <string name="address">Address</string>
    <string name="complete_reach_out">Complete Reach Out</string>
    <string name="lead_temp">Lead Tem *</string>
    <string name="update_pipeline_position">Update Pipeline Position *</string>
    <string name="log_reach_out_type">Log Reach Out Type *</string>
    <string name="log_reach_out_comments">Log Reach Out Comments</string>
    <string name="schedule_next_follow_up">Schedule Next Follow Up</string>
    <string name="complete_team_reach_out">Complete Team Reachout</string>
    <string name="go">Go</string>
    <string name="add_contact">Add contact</string>
    <string name="actions">Actions</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="add_reachout">Add reach out</string>
    <string name="reach_type_s">Reach type: %s</string>
    <string name="goals">Goals</string>
    <string name="team_needs">Team Needs</string>
    <string name="d_team_needs_pending">%d Team Needs Pending</string>
    <string name="calendar_events">Calendar Events</string>
    <string name="d_events_scheduled">%d Events Scheduled</string>
    <string name="d_actions_pending">%d Actions Pending</string>
    <string name="d_goals_pending">%d Goals Pending</string>
    <string name="notepad">Notepad</string>
    <string name="feedback">Feedback</string>
    <string name="products">Products</string>
    <string name="scripts">Scripts</string>
    <string name="account">Account</string>
    <string name="templates">Templates</string>
    <string name="d_days_remained_until_follow_up">%d days remained until follow up</string>
    <string name="scheduled">Scheduled</string>
    <string name="s_ntarget">%s\ntarget</string>
    <string name="s_ncompleted">%s\ncompleted</string>
    <string name="s_npercentage">%s\npercentage</string>
    <string name="daily_complete">Dayly % Complete</string>
    <string name="weekly_complete">Weekly % Complete</string>
    <string name="monthly_complete">Monthly % Complete</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="future_scheduled_follow_ups">Future Scheduled Follow Ups</string>
    <string name="future_scheduled_team_reach_outs">Future Scheduled Team Reach Outs</string>
    <string name="tags_and_custom_fields"><![CDATA[Tags & Custom Fields]]></string>
    <string name="goals_setting_menu">Goals Setting Menu</string>
    <string name="change_plan_description">Choose how hard you would like to run.\nPick a plan from below and Hilo will track your Goals according to your plan. Don\'t worry, you can always change the plan at another time!</string>
    <string name="selected_plan">Selected Plan:</string>
    <string name="keep_the_lights_on">KEEP THE LIGHTS ON</string>
    <string name="weekly_reachouts">Weekly reachouts</string>
    <string name="weekly_followups">Weekly followups</string>
    <string name="weekly_team_needs">Weekly team needs</string>
    <string name="positioned_for_growth">POSITIONED FOR GROWTH</string>
    <string name="watch_out_world">WATCH OUT WORLD</string>
    <string name="custom_plan">CUSTOM PLAN</string>
    <string name="auto_follow_ups_message">Would you like Hilo to automatically add follow ups to your queue?</string>
    <string name="hot_leads">Hot leads</string>
    <string name="days_to_follow_up">Days to follow up</string>
    <string name="warm_leads">Warm leads</string>
    <string name="cold_leads">Cold leads</string>
    <string name="cancel">Cancel</string>
    <string name="revert_to_default_settings">Revert to default settings</string>
    <string name="auto_follow_up_options">Auto follow up options</string>
    <string name="contact_details">Contact Details</string>
    <string name="personal">Personal</string>
    <string name="notes">Notes</string>
    <string name="documents">Documents</string>
    <string name="campaigns">Campaigns</string>
    <string name="email_templates">Email Templates</string>
    <string name="add_note">Add Note</string>
    <string name="description">Description *</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="products_purchased_d">Products Purchased - %d</string>
    <string name="recomended_products_d">Recommended Products - %d</string>
    <string name="product_interested_d">Product Interested - %d</string>
    <string name="solution_tool_recomended_product_d">Solution Tool Recommended Product - %d</string>
    <string name="product_image">Product Image</string>
    <string name="unassign">Unassign</string>
    <string name="all_templates">All templates</string>
    <string name="my_templates">My templates</string>
    <string name="shared_with_downline">Share with downline</string>
    <string name="shared_with_upline">Share with upline</string>
    <string name="hilo_templates">Hilo templates</string>
    <string name="preview_link">Preview Link</string>
    <string name="content">Content</string>
    <string name="select_tags">Select tags</string>
    <string name="add_tag">Add tag</string>
    <string name="comments">Comments *</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="wholesale_price_s">Wholesale Price: \$%d</string>
    <string name="pc_price_s">PC Price: \$%d</string>
    <string name="retail_price_s">Retail Price: \$%d</string>
    <string name="assign">Assign</string>
    <string name="assign_as">Assign as *</string>
    <string name="assign_to">Assign to *</string>
    <string name="my_account">My Account</string>
    <string name="account_details">Account Details</string>
    <string name="hilo_bcc_email">Hilo/BCC Email</string>
    <string name="personal_url">Personal URL</string>
    <string name="personal_url_business_site">Personal URL Business Site</string>
    <string name="solution_tool_link">Solution Tool Link</string>
    <string name="update_account">Update Account</string>
    <string name="bulk_actions">Bulk Actions</string>
    <string name="d_contacts_selected">%d Contacts Selected</string>
    <string name="add_to_goal_tracker">Add To Goal Tracker</string>
    <string name="bulk_update">Bulk Update</string>
    <string name="assign_campaign">Assign Campaign</string>
    <string name="message_title">Message title</string>
    <string name="campaign">Campaign</string>
    <string name="send_date">Send date</string>
    <string name="email_staus">Email status</string>
</resources>