<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="7dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.hilocrm.app.hilo.ui.widget.RalewayButton
                android:id="@+id/backButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                style="@style/Base.Widget.AppCompat.ActionButton"
                android:drawableLeft="@drawable/ic_action_back"
                android:drawableStart="@drawable/ic_action_back"
                android:drawablePadding="-10dp"
                android:lines="1"
                android:text="@string/bulk_actions"/>

            <com.hilocrm.app.hilo.ui.widget.RalewayTextView
                android:id="@+id/contactsSelectedLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/d_contacts_selected"/>

            <com.hilocrm.app.hilo.ui.widget.RalewayButton
                android:id="@+id/addToGoalTrackerBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rectangle_orange_rounded"
                android:textColor="@android:color/white"
                android:text="@string/add_to_goal_tracker"
                android:layout_margin="10dp"/>

            <com.hilocrm.app.hilo.ui.widget.RalewayButton
                android:id="@+id/bulkUpdateBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rectangle_orange_rounded"
                android:text="@string/bulk_update"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"/>

            <com.hilocrm.app.hilo.ui.widget.RalewayButton
                android:id="@+id/assignCampaignBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rectangle_orange_rounded"
                android:text="@string/assign_campaign"
                android:textColor="@android:color/white"
                android:layout_margin="10dp"/>

            <com.hilocrm.app.hilo.ui.widget.RalewayButton
                android:id="@+id/deleteBtn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/rectangle_orange_rounded"
                android:textColor="@android:color/white"
                android:text="@string/delete"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>