<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="7dp"
        app:cardCornerRadius="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.hiloipa.app.hilo.ui.widget.RalewayButton
                android:id="@+id/rodanFieldsToggleBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_contact_btn"
                android:textColor="@drawable/edit_contact_text"
                android:text="@string/rodan_plus_fields"
                android:gravity="start|center_vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:drawableRight="@drawable/edit_contact_icon"
                android:drawableEnd="@drawable/edit_contact_icon"
                app:buttonFont="bold"/>

            <LinearLayout
                android:id="@+id/rodanFieldsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:padding="16dp"
                android:orientation="vertical">
                
                <com.hiloipa.app.hilo.ui.widget.RalewayTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/give_it_a_glow_sample"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/yes"
                        android:textColor="@android:color/darker_gray"
                        app:buttonTint="@color/colorPrimary"
                        android:checked="true"
                        android:drawableLeft="@drawable/radio_button_normal"
                        android:drawableStart="@drawable/radio_button_normal"/>

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textColor="@android:color/darker_gray"
                        app:buttonTint="@color/colorPrimary"
                        android:drawableLeft="@drawable/radio_button_normal"
                        android:drawableStart="@drawable/radio_button_normal"/>
                </RadioGroup>

                <com.hiloipa.app.hilo.ui.widget.RalewayButton
                    android:id="@+id/autoShipDayButton"
                    android:layout_width="match_parent"
                    android:gravity="start|center_vertical"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:imeOptions="actionDone"
                    android:layout_height="45dp"
                    android:background="@drawable/selectable_border_rect"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:drawableRight="@drawable/ic_action_calendar"
                    android:drawableEnd="@drawable/ic_action_calendar"
                    android:drawablePadding="5dp"
                    android:textSize="14sp"
                    android:hint="@string/auto_ship_date"/>

                <com.hiloipa.app.hilo.ui.widget.RalewayTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/concerns"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/wrinklesCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    app:buttonTint="@color/colorPrimary"
                    android:text="@string/wrinkles"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/sensitivityCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    app:buttonTint="@color/colorPrimary"
                    android:text="@string/sensitivity"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/darkMarksCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    app:buttonTint="@color/colorPrimary"
                    android:text="@string/dark_marks"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/lashesBrowsCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    app:buttonTint="@color/colorPrimary"
                    android:text="@string/lashes_brows"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/saggingCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    app:buttonTint="@color/colorPrimary"
                    android:text="@string/sagging"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/acneCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    app:buttonTint="@color/colorPrimary"
                    android:text="@string/acne"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/dullnessCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/darker_gray"
                    app:buttonTint="@color/colorPrimary"
                    android:layout_marginBottom="10dp"
                    android:text="@string/dullness"/>

                <com.hiloipa.app.hilo.ui.widget.RalewayTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gift"/>

                <RadioGroup
                    android:id="@+id/giftRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/giftYesBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/yes"
                        android:textColor="@android:color/darker_gray"
                        app:buttonTint="@color/colorPrimary"
                        android:checked="true"
                        android:drawableLeft="@drawable/radio_button_normal"
                        android:drawableStart="@drawable/radio_button_normal"/>

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/giftNoBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textColor="@android:color/darker_gray"
                        app:buttonTint="@color/colorPrimary"
                        android:drawableLeft="@drawable/radio_button_normal"
                        android:drawableStart="@drawable/radio_button_normal"/>
                </RadioGroup>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp">

                    <com.hiloipa.app.hilo.ui.widget.RalewayEditText
                        android:id="@+id/giftGivenField"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:imeOptions="actionDone"
                        android:layout_height="45dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/selectable_border_rect"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="14sp"
                        android:hint="@string/gift_given"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:src="@mipmap/ic_action_add_small"
                        android:scaleType="centerInside"
                        style="@style/Base.Widget.AppCompat.ActionButton"
                        android:contentDescription="@null" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/giftFieldsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>